--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,1 +1,6 @@
-// $your-veriable-name: example red ;
+/* VARIABLES */
+:root{
+    --white-color: #fff;
+    --nav-link-color: #837d88;
+    --title-color: #2c2830;
+}
