--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,4 +1,7 @@
 @import "visually-hidden";
 @import "container";
 @import "header";
+@import "humanizing";
+@import "different";
+@import "find";
 @import "footer";
