--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -19,8 +19,9 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	/* font-family: "Roboto", "Arial", sans-serif; */
-	font-weight: 400;
+	font-family: "Karla", "Arial", sans-serif;
+	font-weight: 700;
+	overflow-x: hidden;
 }
 main{
 	flex-grow: 1;
