--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,35 +1,29 @@
 @mixin list-rest {
   margin: 0;
-  padding: 0;
-  list-style-type: none;
+  padding-left: 0;
+  list-style: none;
 }
 
-@mixin box ($width, $height, $color) {
-  width:$width;
-  height:$height ;
-  background-color:$color ;
+@mixin nav-link {
+  font-size: 13px;
+  line-height: 15px;
+  letter-spacing: 1.5px;
+  color: var(--nav-link-color);
+
+  &:hover {
+    color: var(--title-color);
+    transition: all 0.3s ease;
+  }
 }
 
-@mixin boxing ($width:400px, $height:300px, $color:red) {
-  width:$width;
-  height:$height ;
-  background-color:$color ;
-}
+@mixin view {
+  padding: 13px 29px;
+  @include nav-link;
+  border: 1.5px solid #FFFFFF;
 
-@mixin text-ellipses {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-@mixin display-justfiy-alain ($content:flex ,$centr:space-between,$middle:center) {
-  display: $content;
-  justify-content:$centr ;
-  align-items:$middle ;
-}
-
-@mixin media-max ($max-width:1440px) {
-  @media only screen and (max-width:$max-width) {
-    @content;
+  &:hover {
+    color: var(--white-color);
+    background-color: var(--title-color);
+    transition: all 0.3s ease;
   }
 }
