--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,3 +1,127 @@
 /* HEADER START */
-
+.site-header {
+    padding: 20px 0px;
+}
+.header-wrap {
+    display: flex;
+    align-items: center;
+}
+.logo {
+    margin-right: auto;
+}
+.header-wrap__btn{
+    display: none;
+    width: 32px;
+    height: 32px;
+    background-image: url("../../images/hamburg.svg");
+    background-color: none  ;
+    border: none;
+}
+.header-wrap__box{
+    display: flex;
+    align-items: center;
+}
+.site-nav {
+    width: 270px;
+    margin-right: 33px;
+}
+.site-nav__list {
+    display: flex;
+}
+.site-nav__item {
+    &:not(:last-child){
+        margin-right: 25px;
+    }
+}
+.site-nav__link {
+    @include nav-link;
+}
+.view-link {
+    color: var(--title-color);
+    @include view;
+    border: 1.5px solid #2C2830;
+}
+@keyframes slidedown{
+    from{
+        transform: translateY(-300px);
+    }
+    to{
+        transform: translateY(0px);
+    }
+}
+@media only screen and (max-width: 800px){
+    .site-header{
+        padding: 31px 0px;
+    }
+    .view-link{
+        display: none;
+    }
+}
+@media only screen and (max-width: 600px){
+    .site-header--open .header-wrap__box{
+        display: block;
+    }
+    .site-header--open .header-wrap__btn{
+        background-image: url("../../images/x.svg");
+        transition: all 0.3s ease;
+    }
+    .header-wrap__btn{
+        display: block;
+        transition: all 0.3s ease;
+    }
+    .header-wrap__box{
+        position: absolute;
+        top: 82px;
+        z-index: 10;
+        right: 0px;
+        left: 0px;
+        display: none;
+        width: 100%;
+        padding: 40px 24px 299px 24px;
+        background-color: var(--title-color);
+        background-image: url("../../images/mobile-line1.svg");
+        background-size: contain;
+        background-position: calc(50% + 0px) calc(50% + 205px);
+        background-repeat: no-repeat;
+        animation-name: slidedown;
+        animation-duration: 1s;
+    }
+    .site-nav{
+        width: 100%;
+        margin: 0px;
+    }
+    .site-nav__list{
+        display: block;
+    }
+    .site-nav__item{
+        &:not(:last-child){
+            margin-left: 0px;
+        }
+        margin: 0px 0px 24px 0px;
+        
+    }
+    .site-nav__link{
+        display: block;
+        font-size: 20px;
+        line-height: 40px;
+        text-align: center;
+        letter-spacing: 1.36364px; 
+        color: var(--white-color);
+    }
+    .header-wrap__tiny{
+        display: block;
+        width: 100%;
+        max-width: 327px;
+        margin: 0 auto;
+    }
+    .view-link{
+        display: block;
+        font-size: 20px;
+        line-height: 40px;
+        text-align: center;
+        letter-spacing: 1.36364px;
+        color: #fff;
+        border-color: #fff;
+    }
+}
 /* HEADER END */
