--- a/scss/blocks/_find.scss
+++ b/scss/blocks/_find.scss
@@ -7,7 +7,7 @@
     justify-content: space-between;
     padding: 69px 80px;
     background-color: #2D2641;
-    background-image: url("../../images/line3.svg");
+    background-image: url("../images/line3.svg");
     background-repeat: no-repeat;
     background-position: right 0px;
 }
