--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,7 +1,7 @@
 /* FOOTER START */
 .site-footer {
     padding: 67px 0px;
-    background-image: url("../../images/footer-line.svg");
+    background-image: url("../images/footer-line.svg");
     background-size: 697px 649px;
     background-position: calc(50% + -515px) calc(50% + -297px);
     background-repeat: no-repeat;
