--- a/scss/blocks/_humanizing.scss
+++ b/scss/blocks/_humanizing.scss
@@ -1,7 +1,7 @@
 .humanizing {
     padding: 105px 0px 127px 0px;
     background-color: #2D2641;
-    background-image: url("../../images/line1.svg"),url("../../images/line2.svg");
+    background-image: url("../images/line1.svg"),url("../images/line2.svg");
     background-repeat: no-repeat;
     background-position: calc(50% + 500px) calc(50% + -80px),calc(50% + -620px) calc(50% + 430px)
 }
